--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="script.js" charset="UTF-8" defer></script>
 	</head>
 	<body>
+		<h1 class="score">SCORE: 0</h1>
 		<div class="background">
 			<div class="dino"></div>
 		</div>
